src/objects/KnowledgeBaseReporting__c.object
<CustomObject>
    <description>This object is used to report on KB.</description>
    <fields>
        <fullName>ArchiveDate__c</fullName>
        <description>Course Article Custom Field to track archive date</description>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArticleCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Base_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArticleCreatedDate__c</fullName>
        <label>Article Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArticleLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Base_Reporting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArticleType__c</fullName>
        <description>Course Article Custom Field pick-list.  Prevent upkeep of pick-list here.</description>
        <label>Article Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsLatestVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInApp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInCsp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPkb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Knowledge Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPrm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <externalId>true</externalId>
        <label>KnowledgeArticleId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleVersionId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Article version id&apos;s from knowledge base (kav objects)</description>
        <externalId>true</externalId>
        <label>KnowledgeArticleVersionId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PublishDate__c</fullName>
        <description>Course article custom field.</description>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <description>Publish status for a knowledge article.  This is kept as a text field so updating of the pick-list will not have to occur on the original knowledge article as well as here.</description>
        <label>Publish Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <inlineHelpText>This was the last time this article was reviewed for quality.</inlineHelpText>
        <label>Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScheduledArchiveDate__c</fullName>
        <description>Duplication of schedule date to track in reporting and display custom vf pages</description>
        <label>Scheduled Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledPublishDate__c</fullName>
        <description>Duplication of schedule date to track in reporting and display custom vf pages</description>
        <label>Scheduled Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Course Article Custom Field pick-list.  This is set as a text field so an update will not have to occur here and keep both pick-lists in sync.</description>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlName__c</fullName>
        <label>URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewArticle__c</fullName>
        <formula>HYPERLINK( &quot;/apex/coursearticle?Id=&quot;&amp;KnowledgeArticleId__c, &quot;View Article&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewCountAll__c</fullName>
        <inlineHelpText>Displays the current article view count from all applications.</inlineHelpText>
        <label>View Count All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewCountApplication__c</fullName>
        <inlineHelpText>Displays the current article view count originated from the SRM.</inlineHelpText>
        <label>View Count Application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewCountCustomer__c</fullName>
        <inlineHelpText>Displays the current article view count originated from the Customer Portal.</inlineHelpText>
        <label>View Count Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewCountPartner__c</fullName>
        <inlineHelpText>Displays the current article view count originated from the Partner Portal.</inlineHelpText>
        <label>View Count Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewCountPublic__c</fullName>
        <inlineHelpText>Displays the current article view count originated from the Public Knowledge Base.</inlineHelpText>
        <label>View Count Public</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewScoreAll__c</fullName>
        <inlineHelpText>Displays the current article normalized view score from all applications.</inlineHelpText>
        <label>View Score All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewScoreApplication__c</fullName>
        <inlineHelpText>Displays the current article normalized view score originated from the SRM.</inlineHelpText>
        <label>View Score Application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewScoreCustomer__c</fullName>
        <inlineHelpText>Displays the current article normalized view score originated from the Customer Portal.</inlineHelpText>
        <label>View Score Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewScorePartner__c</fullName>
        <inlineHelpText>Displays the current article normalized view score originated from the Partner Portal.</inlineHelpText>
        <label>View Score Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewScorePublic__c</fullName>
        <inlineHelpText>Displays the current article normalized view score originated from the Public Knowledge Base.</inlineHelpText>
        <label>View Score Public</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoteCountAll__c</fullName>
        <inlineHelpText>Displays the current article normalized vote score from all applications.</inlineHelpText>
        <label>Vote Score All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoteCountApplication__c</fullName>
        <inlineHelpText>Displays the current article normalized vote score originated from the SRM.</inlineHelpText>
        <label>Vote Score Application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoteCountCustomer__c</fullName>
        <inlineHelpText>Displays the current article normalized vote score originated from the Customer Portal.</inlineHelpText>
        <label>Vote Score Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoteCountPartner__c</fullName>
        <inlineHelpText>Displays the current article normalized vote score originated from the Partner Portal.</inlineHelpText>
        <label>Vote Score Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoteCountPublic__c</fullName>
        <inlineHelpText>Displays the current article normalized vote score originated from the Public Knowledge Base.</inlineHelpText>
        <label>Vote Score Public</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Knowledge Base Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ViewArticle__c</columns>
        <columns>PublishStatus__c</columns>
        <columns>ArticleType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllMyArticlesDraft</fullName>
        <columns>ViewArticle__c</columns>
        <columns>Title__c</columns>
        <columns>PublishStatus__c</columns>
        <columns>CreatedDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PublishStatus__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All My Articles - Draft</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllMyArticlesPublished</fullName>
        <columns>ViewArticle__c</columns>
        <columns>Title__c</columns>
        <columns>PublishStatus__c</columns>
        <columns>CreatedDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PublishStatus__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filters>
        <label>All My Articles - Published</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OnlineNotReviewed</fullName>
        <columns>NAME</columns>
        <columns>ViewArticle__c</columns>
        <columns>Reviewed__c</columns>
        <columns>IsLatestVersion__c</columns>
        <columns>Title__c</columns>
        <columns>PublishDate__c</columns>
        <columns>ArticleType__c</columns>
        <columns>CreatedDate__c</columns>
        <columns>ArticleCreatedBy__c</columns>
        <columns>ArticleLastModifiedBy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PublishStatus__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filters>
        <filters>
            <field>Reviewed__c</field>
            <operation>equals</operation>
        </filters>
        <label>Online - Not Reviewed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>KB Reporting #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Base Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>